# event_blob_tracking

./: CMakeLists.txt  README.md  readme.md
src/: main.cpp
